--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -480,11 +480,13 @@
     <string name="theming_settings_dashboard_icons_plain">Plain</string>
     <string name="theming_settings_dashboard_icons_plain_accent">Plain accent</string>
 
-    <!-- FOD icon picker -->
-    <string name="fod_icon_picker_category_title">FOD settings</string>
-    <string name="fod_icon_picker_title">Fingerprint icon</string>
-    <string name="fod_icon_picker_summary">Choose your favorite fingerprint icon</string>
+    <!--FOD -->
+    <string name="fod_icon_picker_category_title">FOD customization options</string>
+    <string name="fod_icon_picker_title">FOD icon picker</string>
+    <string name="fod_icon_picker_summary">Pick your favourite fingerprint icon</string>
     <string name="fod_icon_picker_footer">In order to add your own icon, select the top left icon and use the OnePlus 6T FP Customizer app to select the icon you want.</string>
+    <string name="fod_wallpaper_color">Use wallpaper color for FOD icon</string>
+    <string name="fod_wallpaper_color_summary">Uses adjusted primary wallpaper color for FOD icon\nNOTE: might look good only with some wallpapers</string>
 
     <!-- FOD animations -->
     <string name="fod_recog_animation">Fingerprint animation</string>
@@ -513,17 +515,24 @@
     <string name="fod_recog_animation_pureview_molecular">Molecular</string>
     <string name="fod_recog_animation_rog_fusion">Fusion</string>
     <string name="fod_recog_animation_rog_pulsar">Pulsar</string>
+    <string name="fod_recog_animation_rog_supernova">Supernova</string>
+    <string name="fod_recog_animation_shine">Shine</string>
+    <string name="fod_recog_animation_smoke">Smoke</string>
+    <string name="fod_recog_animation_strings">Strings</string>
+    <string name="fod_recog_animation_quantum">Quantum</string>
 
     <!-- FOD pressed color -->
     <string name="fod_pressed_color_title">Fingerprint pressed color</string>
+    <string name="fod_pressed_color_footer">Icons/colors may vary depending on which device you are using.</string>
     <string name="fod_pressed_color_white">White</string>
     <string name="fod_pressed_color_cyan">Cyan</string>
     <string name="fod_pressed_color_green">Green</string>
     <string name="fod_pressed_color_yellow">Yellow</string>
+    <string name="fod_pressed_color_light_yellow">Light Yellow</string>
 
     <!-- Nightlight Fod -->
     <string name="fod_night_light_title">Disable night light when showing FOD</string>
-    <string name="fod_night_light_summary">Disable night light on lockscreen if FOD is active. Disabling this option might affect your fingerprint accuracy with night light on.</string>
+    <string name="fod_night_light_summary">Disable night light on lockscreen if FOD is active. </string>
 
 <!-- Long press power for torch -->
     <string name="power_category_header">Power Button</string>
