--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -878,4 +878,7 @@
     <string name="gaming_mode_danmaku_speed_vertical_title">Danmaku speed (vertical)</string>
     <string name="gaming_mode_danmaku_blacklist">Blacklist</string>
     <string name="add_package_to_title">Add application</string>
+
+    <string name="qs_brightness_slider_title">Toggle Brightness Slider style</string>
+    <string name="qs_brightness_slider_summary">Requires SystemUI Restart</string>
 </resources>
