--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -887,4 +887,7 @@
 
     <string name="qs_brightness_slider_title">Toggle Brightness Slider style</string>
     <string name="qs_brightness_slider_summary">Requires SystemUI Restart</string>
+
+    <string name="battery_level_colors_title">Toggle colorful battery icon</string>
+    <string name="battery_level_colors_summary">Each battery level drop is color coded</string>
 </resources>
