--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -885,9 +885,13 @@
     <string name="gaming_mode_danmaku_blacklist">Blacklist</string>
     <string name="add_package_to_title">Add application</string>
 
-    <string name="qs_brightness_slider_title">Toggle Brightness Slider style</string>
-    <string name="qs_brightness_slider_summary">Requires SystemUI Restart</string>
-
     <string name="battery_level_colors_title">Toggle colorful battery icon</string>
-    <string name="battery_level_colors_summary">Each battery level drop is color coded</string>
+    <string name="battery_level_colors_summary">Each battery level drop is color coded (Requires SystemUI restart)</string>
+
+    <!-- QS brightness Slider style -->
+    <string name="qs_brightness_slider_title">Select Brightness Slider style</string>
+    <string name="qs_brightness_slider_summary">Requires SystemUI Restart</string>
+    <string name="qs_slider_default">Default style</string>
+    <string name="qs_slider_style_1">Thick accented style</string>
+    <string name="qs_slider_style_2">A12 style</string>
 </resources>
